--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <script src="./js/script.js" defer> </script>
             <title>NLW eSports</title>
 
             <link rel="stylesheet" href="./styles.css">
@@ -108,6 +109,12 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+            </section>
+            <section>
+                <div class="game-board">
+                    <img src="./imageGame/Samurai.gif" class="samurai">
+                    <img src="./imageGame/EnemyGhost.gif" class="Ghost">
                 </div>
             </section>
         </main>
